--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "author": "Sascha Gehlich <sascha@gehlich.us>",
   "license": "MIT",
   "devDependencies": {
-    "browserify": "^9.0.8",
     "gulp": "^3.8.11",
+    "gulp-uglify": "^1.2.0",
+    "gulp-webpack": "^1.5.0",
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
