--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pixi-svg-graphics",
   "version": "0.0.1",
-  "description": "Converts SVG documents to PIXI.Graphics instances",
+  "description": "Draws SVG documents on PIXI.Graphics objects",
   "main": "src/pixi-svg-graphics.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
