--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "devDependencies": {
     "gulp": "^3.8.11",
+    "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.2.0",
     "gulp-webpack": "^1.5.0",
     "vinyl-source-stream": "^1.1.0"
