--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pixi-svg-graphics",
+  "name": "pixi-vector-graphics",
   "version": "0.0.3",
   "description": "Draws SVG documents on PIXI.Graphics objects",
   "main": "src/pixi-svg-graphics.js",
