--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "Converts SVG documents into PIXI.Graphics objects",
   "main": "dist/pixi-svg-graphics.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/saschagehlich/pixi-svg-graphics.git"
+  },
   "scripts": {
     "build": "gulp",
     "build:watch": "gulp watch",
@@ -15,16 +19,11 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "gulp": "^3.8.11",
+    "gulp": "^4.0.0",
     "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^1.2.0",
-    "gulp-webpack": "^1.5.0",
-    "vinyl-source-stream": "^1.1.0"
+    "gulp-webpack": "^1.5.0"
   },
   "peerDependencies": {
-    "pixi.js": "^3.0.6"
-  },
-  "dependencies": {
-    "@pixi/filter-outline": "^2.7.0"
+    "pixi.js": ">= 3.0.0"
   }
 }
